--- a/Java-Login-App/pom.xml
+++ b/Java-Login-App/pom.xml
@@ -16,7 +16,7 @@
 	<description>DPT DevOps project for Spring Boot</description>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version></java.version>
 	</properties>
 
 	<dependencies>
