--- a/Java-Login-App/pom.xml
+++ b/Java-Login-App/pom.xml
@@ -16,7 +16,7 @@
 	<description>DPT DevOps project for Spring Boot</description>
 
 	<properties>
-		<java.version></java.version>
+		<java.version>11</java.version>
 	</properties>
 
 	<dependencies>
@@ -28,7 +28,7 @@
 		<dependency>
 		    <groupId>org.apache.tomcat</groupId>
 		    <artifactId>tomcat-jasper</artifactId>
-		    <version>9.0.31</version>
+		    <version>9</version>
 		</dependency>
 
 		<dependency>
@@ -67,7 +67,7 @@
 			</plugin>
 		</plugins>
 	</build>
-<distributionManagement>
+///<distributionManagement>
     <repository>
         <id>central</id>
         <name>a0nymgefaiwwu-artifactory-primary-0-releases</name>
@@ -75,4 +75,4 @@
     </repository>
 </distributionManagement> 
 
-</project>
+////</project>
